# skalax

./: .gitignore  CITATION.cff  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
benchmarks/: _utils.py  ch4_stretch.py  differentiable_energy.py  extensive_performance.py  forward_equivalence.py  gradient_equivalence.py  performance.py  reaction_curve.py  scf_validation.py  summary_plot.py
benchmarks/data/: ch4_stretch.json  differentiable_energy.json  extensive_performance.json  forward_equivalence.json  gradient_equivalence.json  performance.json  reaction_curve.json  scf_validation.json  summary_data.json
examples/: basic_usage.py  check_equivalent_torch_jax_skala.py  compare_dissociation_data.txt  compare_skala_dissociation.py  dissociation_profile.py  h2_dissociation_data.txt  inspect_skala_weights.py  run_jit_h2.py  run_pyscf_calculation.py  run_skala_forward_pass.py  run_skala_jax.py  run_skala_jax_local.py  run_skala_torch.py  save_weights.py
examples/skala_jax/weights/: skala_buffers.npz  skala_weights.npz
skalax/: __init__.py  convert_weights.py
skalax/functional/: __init__.py  base.py  functions.py  layers.py  model.py
skalax/pyscf/: __init__.py  backend.py  dft.py  features.py  numint.py
skalax/utils/: __init__.py  scatter.py
skalax/weights/: config.json
tests/: test_full_model.py  test_jax_equivalence.py  test_jit.py  test_nonlocal_model.py  test_pyscf_integration.py  test_unit_behavior.py  test_with_loaded_weights.py
